--- a/res/css/wrm.css
+++ b/res/css/wrm.css
@@ -5,5 +5,16 @@ by: Navilindo AM
 */
 
 body {
-  nackground-color : gray;
+  background-color : gray;
 }
+
+/*
+fonts
+*/
+
+/*
+font-family: 'Barlow', sans-serif;
+font-family: 'Poppins', sans-serif;
+font-family: 'Quicksand', sans-serif;
+
+*/
