--- a/res/css/wrm.css
+++ b/res/css/wrm.css
@@ -27,3 +27,8 @@ font-family: 'Quicksand', sans-serif;
   font-weight: 700;
   font-family: 'Barlow', sans-serif;
 }
+
+.main {
+  height: 100vh;
+  background-image: linear-gradient(160deg, var(--btRed), var(--btBlue));
+}
