--- a/res/css/wrm.css
+++ b/res/css/wrm.css
@@ -28,7 +28,8 @@ font-family: 'Quicksand', sans-serif;
   font-family: 'Barlow', sans-serif;
 }
 
-.main {
+#index-welcome {
   height: 100vh;
   background-image: linear-gradient(160deg, var(--btRed), var(--btBlue));
+  background-image: linear-gradient(160deg, blue, yellow);
 }
