styles - font to poppins

--- a/res/css/wrm.css
+++ b/res/css/wrm.css
@@ -26,6 +26,7 @@ font-family: 'Quicksand', sans-serif;
   color: #123456;
   font-weight: 700;
   font-family: 'Barlow', sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 #index-welcome {
